--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="welcome.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merienda+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>Document</title>
   </head>
   <link
@@ -20,7 +24,7 @@
     crossorigin="anonymous"
   />
   <body>
-    <!-- div navbar with volume icon & login button -->
+    <!-- ANCHOR navbar -->
 
     <div id="navbar">
       <div class="navContainer d-flex justify-content-between">
@@ -29,42 +33,38 @@
       </div>
     </div>
 
-
-    <!-- jumbotron -->
+    <!-- ANCHOR jumbotron -->
 
     <div
-      class="jumbotron mt-5 mb-5 p-0 d-flex flex-column align-items-center"
-      id="jumbotron"
+      class="jumbotron p-0 d-flex flex-column align-items-center justify-content-around"
     >
       <h1 class="display-4">DRAWWWLS</h1>
-      <p class="playersOnline">x amount of players are online</p>
+      <p class="player-on">x amount of players are online</p>
       <div class="btn-group d-flex justify-content-around">
         <button class="btn-register">Register</button>
         <button class="btn-guest">Play as guest</button>
         <button class="btn-createRoom">+ Create room</button>
       </div>
     </div>
+
+    <!-- ANCHOR leaderboard, guest & private rooms -->
     <div class="container">
       <div class="row">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus
-        earum corrupti magnam, corporis veritatis laboriosam consectetur! Minima
-        veritatis distinctio nemo quasi aperiam nesciunt consequuntur porro
-        sapiente, laboriosam odit placeat doloremque autem accusamus natus
-        numquam cum nisi veniam. Fuga pariatur aliquid architecto harum non
-        alias doloribus, aliquam at repudiandae atque quia reprehenderit ducimus
-        suscipit fugiat fugit voluptates repellendus nulla, cumque commodi autem
-        asperiores tempora iusto cupiditate aperiam. Ipsum, pariatur,
-        perferendis minus corrupti cumque optio labore explicabo quisquam est
-        tempora qui ratione alias odit asperiores earum! Autem molestias
-        voluptatem eligendi officiis porro. Quae cum eveniet et nisi iusto
-        impedit! Illum consequatur esse, ipsum illo nostrum commodi expedita
-        asperiores possimus rerum nesciunt temporibus suscipit qui nam voluptas
-        cupiditate quia quaerat veritatis exercitationem eligendi?
+        <div class="col-md-6" id="leaderboard">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero iure,
+          in omnis tempora ut dolr, laboriosam corrupti amet numquam
+          repudiandae facilis doloribus consequuntur laborum repellendus cum
+          libero dolore aut. Ipsum enim odit, dolores nesciunt expedita culpa
+          quis voluptate aspernatur quam officia sint esse voluptas impedit
+          eligendi eum, fuga laborum cumque!
+        </div>
+        <div class="col-md-6">
+          
+        </div>
       </div>
     </div>
 
-
-<!-- footer -->
+    <!-- ANCHOR footer -->
 
     <footer class="d-flex justify-content-center align-items-center">
       <div class="footerContainer d-flex justify-content-between">
