--- a/gamepage.html
+++ b/gamepage.html
@@ -1,98 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" type="text/css" href="welcome.css" />
-  <title>Game page</title>
-</head>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="gamepage.css" />
 
-<body>
-  <!-- div navbar with volume icon & login button -->
-  <div id="navbar">
+  <title>Game page</title>
+  </head>
+
+  <body>
+  <!-- De navigatiebalk waar de login button instaat -->
+    <div id="navbar">
     <div class="navContainer d-flex justify-content-between">
       <i class="fas fa-volume-up fa-2x" id="speaker"></i>
       <button class="btn-login">Login</button>
     </div>
-  </div>
-
-  <!--  -->
-
-  <!-- De achtergrond container waar alle elementen instaan -->
-  <div class="overallContainer">
-  
-    <!-- De navigatiebalk waar de login button instaat -->
-    <div class="headerLogoLogin">
-      <h1 id="">DRAWWWL<IMG id="logo" src="enkel logo.JPG"></IMG>S</h1>
-      <button id="Login">
-        <h5 id="LoginName/guestName">Login</h5>
-      </button>
     </div>
+
+  <!-- jumbotron -->
+    <div class="jumbotron mt-5 mb-5 p-0 d-flex flex-column align-items-center" id="jumbotron">
+      <div class="headerDraw">
+        <h4><span>Draw example or word</h4></span>
+        <p><span>- - - - - - - - - - - -</p></span> 
+      </div>
   
-  
-    <!-- De linker kolom waar de spelerslijst instaat -->
-    <div class="sidebarPlayer">
-      <div class="headerPlayer">
-        <h3 id="Players">Players</h3>
-        <img id="picture1" src="avatorManuel.GIF" alt="avator">
-        <h5 id="naam1">Manuel</h5>
-        <h6 id="punten1">206 pt</h6>
+  <!-- De linker kolom waar de chatbox instaat --> 
+     <div class="container mb-5">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="sidebarChatroom">
+            <div class="panel panel-default">
+              <div class="panel-heading align-items-center d-flex">
+                <div class="title">
+                  <i class="fas fa-user-ninja pr-1 pt-3"></i> <span>Players</span>
+                </div>
+              </div>
+              <div class="panel-body text-left pl-1 pr-1 pt-1 pb-1">
+                <table style="width:100%">
+                  <tr>
+                    <th>Avatar</th>
+                    <th>Nickname</th>
+                    <th>Points</th>
+                  </tr>
+                  <tr>
+                    <td><img class="avatarPicture" src="images/avatarManuel.GIF" alt="avatar avatarManuel"></td>
+                    <td><h5 id="naam1">Manuel</h5></td>
+                    <td><h6 id="punten1">206 pt</h6></td>
+                  </tr>
+                  <tr>
+                    <td><img class="avatarPicture" src="images/avatarGregory.GIF" alt="avatar Gregory"></td>
+                    <td><h5 id="naam2">Gregory</h5></td>
+                    <td><h6 id="punten2">809 pt</h6></td>
+                  </tr>
+                  <tr>
+                    <td><img class="avatarPicture" src="images/avatarChristophe.GIF" alt="avatar Christophe"></td>
+                    <td><h5 id="naam3">Christophe</h5></td>
+                    <td><h6 id="punten3">1042 pt</h6></td>
+                  </tr>
+                  <tr>
+                    <td><img class="avatarPicture" src="images/avatarMireille.GIF" alt="avatar Mireille"></td>
+                    <td><h5 id="naam4">Mireille</h5></td>
+                    <td><h6 id="punten4">89 pt</h6></td>
+                  </tr>
+                  <tr>
+                    <td><img class="avatarPicture" src="images/avatarKathy.GIF" alt="avatar Kathy"></td>
+                    <td><h5 id="naam5">Kathy</h5></td>
+                    <td><h6 id="punten5">52 pt</h6></td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </div>    
 
-        <img id="picture2" src="avatorGregory.GIF" alt="avator">
-        <h5 id="naam2">Gregory</h5>
-        <h6 id="punten2">809 pt</h6>
+  <!-- De canvas waar je in tekent --> 
+     <div class="headerCanvas mb-5">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="canvas">
+            <div class="panel panel-default">
+              <div class="panel-heading align-items-center d-flex">
+                <div class="title">
+                  <i class="fas fa-chalkboard"></i>
+                  <span>DRAWWWLS Canvas</span>
+                  <i class="fas fa-clock">1 min.</i> 
+                  <i class="fas fa-arrow-circle-right">Round 2 of 3</i>
+                  <canvas id="drawCanvas mt-5 mb-5 p-0 d-flex flex-column align-items-center"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </div>
 
-        <img id="picture3" src="avatorChristophe.GIF" alt="avator">
-        <h5 id="naam3">Christophe</h5>
-        <h6 id="punten3">1042 pt</h6>
-
-        <img id="picture4" src="avatorMireille.GIF" alt="avator">
-        <h5 id="naam4">Mireille</h5>
-        <h6 id="punten4">89 pt</h6>
-
-        <img id="picture5" src="avatorKathy.GIF" alt="avator">
-        <h5 id="naam5">Kathy</h5>
-        <h6 id="punten5">52 pt</h6>
+  <!-- De rechter kolom waar de spelers instaan -->
+    <div class="container mb-5">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="sidebarChatroom">
+            <div class="panel panel-default">
+              <div class="panel-heading align-items-center d-flex">
+                <div class="title">
+                  <i class="fas fa-comment pt-3"></i>
+                  <span>Chatroom</span>
+                </div>
+              </div>
+              <div class="panel-body text-left pl-2 pr-2 pt-1 pb-1">
+                <table style="width:100%">
+                  <tr>
+                    <th>Nickname</th>
+                    <th>Antwoord</th>
+                  </tr>
+                  <tr>
+                    <td>f0rest</td>
+                    <td>LLkkkkk</td>
+                  </tr>
+                  <tr>
+                    <td>ZyWoo</td>
+                    <td>Ffrrtty</td>
+                  </tr>
+                  <tr>
+                    <td>s1mple</td>
+                    <td>Nsshhzy</td>
+                  </tr>
+                  <tr>
+                    <td>TwistZ</td>
+                    <td>Kjhtt</td>
+                  </tr>
+                  <tr>
+                    <td>Twitters</td>
+                    <td>Kgrtt</td>
+                  </tr>
+                  <tr>
+                    <td>Fuzzle</td>
+                    <td>Zennnn</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  
-    <!-- De canvas waar je in tekent -->
-    <div class="headerCanvas">
-      <img src="" alt="">
-    </div>
-  
-    <!-- De rechter kolom waar de spelers hun antwoorden instaan -->
-    <div class="sidebarChatroom">
-      <div class="headerChatroom">
-        <h3 id="Chatroom">Chatroom</h3>
-      </div>
-    </div>
-  
-  
-  </div>
+   </div>
 
-
-  <!-- footer -->
-
+  <!-- footer --> 
     <footer class="d-flex justify-content-center align-items-center">
       <div class="footerContainer d-flex justify-content-between">
-        <p class="copyright">©2019<span>DRAWWWL <img id="logoFooter" class="h-5 w-5" src="enkel logo.JPG" alt="logo Drawwwls"> S</span>. All rights reserved</p>
+        <p class="copyright">©2019 DRAWWWLS. All rights reserved</p>
       </div>
-
-      <div class="links d-flex justify-content-end justify-content-between flex-row ">
-          <a href="#">How to play</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
-        </div>
-      
+      <div class="links d-flex justify-content-between">
+        <a href="#">How to play</a>
+        <a href="#">Contact</a>
+        <a href="#">About</a>
+      </div>
     </footer>
 
-    <!-- links -->
+  <!-- links -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous">
@@ -105,6 +178,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous">
     </script>
+
   </body>
 </html>
 
